# spreadscript

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
data/: test.ods
docs/: CONTRIBUTING.md  index.rst  installation.rst  introduction.rst  library.rst  usage.rst
spreadscript/: __init__.py  cli.py  spreadscript.py
