[metadata]
name = spreadscript
version = 0.0.4
description = spreadscript: Use a spreadsheet as a function.
long_description = file: README.rst
author = Jeroen F.J. Laros
author_email = jlaros@fixedpoint.nl
url = https://github.com/jfjlaros/spreadscript
keywords =
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
copyright = 2018

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    configparser

[options.entry_points]
console_scripts =
    spreadscript = spreadscript.cli:main
